{
  "version": 4,
  "terraform_version": "0.12.4",
  "serial": 35,
  "lineage": "1eddd1cb-f520-3048-1030-ea77d28c868f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-db72e627",
            "domain": "vpc",
            "id": "eipalloc-02d1556a5dd6143b7",
            "network_interface": "eni-072bd26289ca770fe",
            "private_dns": "ip-10-0-0-235.ap-south-1.compute.internal",
            "private_ip": "10.0.0.235",
            "public_dns": "ec2-3-6-174-160.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.6.174.160",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "natgw_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-98ed3f42",
            "domain": "vpc",
            "id": "eipalloc-007659e65ab5314a7",
            "network_interface": "eni-0801e0da33f22a66f",
            "private_dns": "ip-10-0-2-214.ap-south-1.compute.internal",
            "private_ip": "10.0.2.214",
            "public_dns": "ec2-35-154-31-140.ap-south-1.compute.amazonaws.com",
            "public_ip": "35.154.31.140",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "elb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:loadbalancer/elb",
            "availability_zones": [
              "ap-south-1a",
              "ap-south-1b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "elb-1917953011.ap-south-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "HTTP:80/",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "elb",
            "idle_timeout": 60,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "elb",
            "security_groups": [
              "sg-0971b708d66b1bfa6"
            ],
            "source_security_group": "906428324182/sec_elb",
            "source_security_group_id": "sg-0971b708d66b1bfa6",
            "subnets": [
              "subnet-048ed2fd4d4dcc092",
              "subnet-0ca63437a4e2139f0"
            ],
            "zone_id": "ZP97RAFLXTNZK"
          },
          "depends_on": [
            "aws_security_group.sec_lb",
            "aws_subnet.PublicSubnetA",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-0cb5e9dc776a6d4fc",
            "owner_id": "906428324182",
            "tags": {
              "Name": "Internet Gateway"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:loadbalancer/app/alb/94b69aa7c9cf6011",
            "arn_suffix": "app/alb/94b69aa7c9cf6011",
            "dns_name": "alb-371065241.ap-south-1.elb.amazonaws.com",
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:loadbalancer/app/alb/94b69aa7c9cf6011",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb",
            "security_groups": [
              "sg-0971b708d66b1bfa6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-048ed2fd4d4dcc092"
              },
              {
                "subnet_id": "subnet-0ca63437a4e2139f0"
              }
            ],
            "subnets": [
              "subnet-048ed2fd4d4dcc092",
              "subnet-0ca63437a4e2139f0"
            ],
            "tags": {
              "Name": "alb"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "depends_on": [
            "aws_security_group.sec_lb",
            "aws_subnet.PublicSubnetA",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nlb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:loadbalancer/net/nlb/8a7ca18b8c52fe1e",
            "arn_suffix": "net/nlb/8a7ca18b8c52fe1e",
            "dns_name": "nlb-8a7ca18b8c52fe1e.elb.ap-south-1.amazonaws.com",
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:loadbalancer/net/nlb/8a7ca18b8c52fe1e",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "nlb",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-048ed2fd4d4dcc092"
              },
              {
                "subnet_id": "subnet-0ca63437a4e2139f0"
              }
            ],
            "subnets": [
              "subnet-048ed2fd4d4dcc092",
              "subnet-0ca63437a4e2139f0"
            ],
            "tags": {
              "Name": "nlb"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84",
            "zone_id": "ZVDDRBQ08TROA"
          },
          "depends_on": [
            "aws_subnet.PublicSubnetA",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:listener/app/alb/94b69aa7c9cf6011/547db4be31719e51",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:targetgroup/alb-target-group/3c1e8afdde00dbcb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:listener/app/alb/94b69aa7c9cf6011/547db4be31719e51",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:loadbalancer/app/alb/94b69aa7c9cf6011",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.alb",
            "aws_lb_target_group.alb_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nlb_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:listener/net/nlb/8a7ca18b8c52fe1e/4bd008cf55a87d54",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:targetgroup/nlb-target-group/f9ddb2db7544f2b0",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:listener/net/nlb/8a7ca18b8c52fe1e/4bd008cf55a87d54",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:loadbalancer/net/nlb/8a7ca18b8c52fe1e",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.nlb",
            "aws_lb_target_group.nlb_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:targetgroup/alb-target-group/3c1e8afdde00dbcb",
            "arn_suffix": "targetgroup/alb-target-group/3c1e8afdde00dbcb",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:targetgroup/alb-target-group/3c1e8afdde00dbcb",
            "lambda_multi_value_headers_enabled": false,
            "name": "alb-target-group",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 1800,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "name": "alb_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nlb_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:targetgroup/nlb-target-group/f9ddb2db7544f2b0",
            "arn_suffix": "targetgroup/nlb-target-group/f9ddb2db7544f2b0",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "port": "traffic-port",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:906428324182:targetgroup/nlb-target-group/f9ddb2db7544f2b0",
            "lambda_multi_value_headers_enabled": false,
            "name": "nlb-target-group",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "tags": {
              "name": "nlb_target_group"
            },
            "target_type": "instance",
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-02d1556a5dd6143b7",
            "id": "nat-046c7aab07970c16d",
            "network_interface_id": "eni-072bd26289ca770fe",
            "private_ip": "10.0.0.235",
            "public_ip": "3.6.174.160",
            "subnet_id": "subnet-0ca63437a4e2139f0"
          },
          "depends_on": [
            "aws_eip.natgw_a",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "public_nat_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-007659e65ab5314a7",
            "id": "nat-06e10764bb376b6fb",
            "network_interface_id": "eni-0801e0da33f22a66f",
            "private_ip": "10.0.2.214",
            "public_ip": "35.154.31.140",
            "subnet_id": "subnet-048ed2fd4d4dcc092"
          },
          "depends_on": [
            "aws_eip.natgw_b",
            "aws_internet_gateway.gw",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "all",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 2,
                "to_port": 0
              }
            ],
            "id": "acl-02938f33230640814",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 1,
                "to_port": 0
              }
            ],
            "owner_id": "906428324182",
            "subnet_id": null,
            "subnet_ids": [],
            "tags": {
              "Name": "open acl"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0648541b68d6f3751",
            "owner_id": "906428324182",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-046c7aab07970c16d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route A"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_nat_gateway.public_nat_a",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0cf02f1067a055cb7",
            "owner_id": "906428324182",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-06e10764bb376b6fb",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Private Route B"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_nat_gateway.public_nat_b",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_a",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0bf5444926a4ed511",
            "owner_id": "906428324182",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb5e9dc776a6d4fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route A"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_b",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-001b1fc28fcfca05e",
            "owner_id": "906428324182",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cb5e9dc776a6d4fc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Route B"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ef662f8b4562c585",
            "route_table_id": "rtb-0648541b68d6f3751",
            "subnet_id": "subnet-0d8fdb43897c68c14"
          },
          "depends_on": [
            "aws_route_table.private_route_a",
            "aws_subnet.PrivateSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PrivateSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bbc6b5d6b035e511",
            "route_table_id": "rtb-0cf02f1067a055cb7",
            "subnet_id": "subnet-046eed321ea9f5edf"
          },
          "depends_on": [
            "aws_route_table.private_route_b",
            "aws_subnet.PrivateSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b0416a42a06f5d9",
            "route_table_id": "rtb-0bf5444926a4ed511",
            "subnet_id": "subnet-0ca63437a4e2139f0"
          },
          "depends_on": [
            "aws_route_table.public_route_a",
            "aws_subnet.PublicSubnetA"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "PublicSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-044a62d0f7d3be98d",
            "route_table_id": "rtb-001b1fc28fcfca05e",
            "subnet_id": "subnet-048ed2fd4d4dcc092"
          },
          "depends_on": [
            "aws_route_table.public_route_b",
            "aws_subnet.PublicSubnetB"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:906428324182:security-group/sg-0971b708d66b1bfa6",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0971b708d66b1bfa6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sec_elb",
            "name_prefix": null,
            "owner_id": "906428324182",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sec_web",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:906428324182:security-group/sg-04cabaef6e69b6279",
            "description": "Used for autoscale group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04cabaef6e69b6279",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "sec_web",
            "name_prefix": null,
            "owner_id": "906428324182",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:906428324182:subnet/subnet-0d8fdb43897c68c14",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d8fdb43897c68c14",
            "map_public_ip_on_launch": false,
            "owner_id": "906428324182",
            "tags": {
              "Name": "Private Subnet A"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PrivateSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:906428324182:subnet/subnet-046eed321ea9f5edf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-046eed321ea9f5edf",
            "map_public_ip_on_launch": false,
            "owner_id": "906428324182",
            "tags": {
              "Name": "Private Subnet B"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetA",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:906428324182:subnet/subnet-0ca63437a4e2139f0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0ca63437a4e2139f0",
            "map_public_ip_on_launch": false,
            "owner_id": "906428324182",
            "tags": {
              "Name": "Public Subnet A"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "PublicSubnetB",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:906428324182:subnet/subnet-048ed2fd4d4dcc092",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-048ed2fd4d4dcc092",
            "map_public_ip_on_launch": false,
            "owner_id": "906428324182",
            "tags": {
              "Name": "Public Subnet B"
            },
            "vpc_id": "vpc-04b21643d4c8f7c84"
          },
          "depends_on": [
            "aws_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:906428324182:vpc/vpc-04b21643d4c8f7c84",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/20",
            "default_network_acl_id": "acl-0229c262121a6d094",
            "default_route_table_id": "rtb-0c3882f8ae7103eb1",
            "default_security_group_id": "sg-03b186413664878f9",
            "dhcp_options_id": "dopt-cfcf2ea4",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-04b21643d4c8f7c84",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c3882f8ae7103eb1",
            "owner_id": "906428324182",
            "tags": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}